# Tekst

./: .coveragerc  .dockerignore  .editorconfig  .env  .env.dev  .env.docker  .env.prod  .env.prod.example  .env.production  .env.test  .flake8  .gitattributes  .gitignore  .openapi-generator-ignore  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Earthfile  MANIFEST.in  README.md  Taskfile.yaml  Taskfile.yml  compose.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn_conf.py  index.html  openapi.json  package-lock.json  package.json  pyproject.toml  renovate.json  stack.dev.yml  textrig.code-workspace  tsconfig.app.json  tsconfig.json  (+1 more)
.github/: renovate.json
Tekst-API/: .dockerignore  .env  .env.dev  .env.template  .env.test  .gitignore  .justfile  CITATION.cff  Dockerfile  README.md  Taskfile.yml  entrypoint.sh  openapi.json  pyproject.toml
Tekst-API/.github/workflows/: style.yml  tests.yml
Tekst-API/demo/: contents.json  locations.json  resources.json  state.json  texts.json  users.json
Tekst-API/deploy/: entrypoint.sh
Tekst-API/deploy/elasticsearch/: Dockerfile
Tekst-API/deployment/elasticsearch/: Dockerfile
Tekst-API/deployment/gunicorn/: gunicorn_conf.py
Tekst-API/dev/: compose.yml  docker-compose.yml
Tekst-API/dev/caddy/: Caddyfile
Tekst-API/dev/smtp-ssl/: generate.sh
Tekst-API/dev/static/: fonts.css
Tekst-API/tekst/: __init__.py  __main__.py  app.py  auth.py  config.py  counters.py  db.py  dependencies.py  errors.py  html.py  i18n.py  locks.py  logging.py  logs.py  middlewares.py  openapi.py  platform.py  resources.py  search.py  settings.py  setup.py  state.py  tasks.py  types.py  utils.py  welcome.json
Tekst-API/tekst/db/: __init__.py
Tekst-API/tekst/db/migrations/: 0_1_0_a0.py  0_2_0_a0.py  0_2_1_a0.py  __init__.py  migration_0_10_0a0.py  migration_0_11_0a0.py  migration_0_11_1a0.py  migration_0_12_0a0.py  migration_0_13_0a0.py  migration_0_17_0a0.py  migration_0_19_0a0.py  migration_0_1_0a0.py  migration_0_22_0a0.py  migration_0_24_0a0.py  migration_0_28_0a0.py  migration_0_2_0a0.py  migration_0_2_1a0.py  migration_0_30_0a0.py  migration_0_33_0a0.py  migration_0_3_0a0.py  migration_0_42_0a0.py  migration_0_45_0a0.py  migration_0_49_4b0.py  migration_0_4_0a0.py  migration_0_4_1a0.py  migration_0_4_2a0.py  migration_0_50_0b0.py  migration_0_51_0b0.py  migration_0_53_2b0.py  migration_0_5_0a0.py  migration_0_6_0a0.py  migration_0_7_0a0.py  migration_0_8_0a0.py  migration_0_9_0a0.py
Tekst-API/tekst/email/: __init__.py
Tekst-API/tekst/email/templates/: .gitattributes
Tekst-API/tekst/layer_types/: __init__.py  debug.py  plaintext.py
Tekst-API/tekst/models/: bookmark.py  browse.py  common.py  content.py  correction.py  email.py  exchange.py  layer.py  layer_configs.py  location.py  message.py  node.py  notice.py  notifications.py  platform.py  precomputed.py  resource.py  resource_configs.py  resource_unions.py  search.py  segment.py  settings.py  stats.py  text.py  unit.py  user.py
Tekst-API/tekst/notifications/: __init__.py
Tekst-API/tekst/openapi/: __init__.py  tags_metadata.py
Tekst-API/tekst/resource_types/: __init__.py  api_call.py  audio.py  debug.py  external_references.py  images.py  location_metadata.py  plain_text.py  plaintext.py  rich_text.py  text_annotation.py
Tekst-API/tekst/resources/: __init__.py  api_call.py  audio.py  debug.py  external_references.py  images.py  import_template_readme.txt  location_metadata.py  plain_text.py  plaintext.py  rich_text.py  text_annotation.py
Tekst-API/tekst/routers/: __init__.py  admin.py  bookmarks.py  browse.py  contents.py  corrections.py  dev.py  layers.py  locations.py  messages.py  nodes.py  notices.py  platform.py  resources.py  root.py  search.py  settings.py  status.py  texts.py  units.py  users.py
Tekst-API/tekst/sample_data/: __init__.py  _sample_data.py
Tekst-API/tekst/sample_data/db/: contents.json  layers.json  locations.json  nodes.json  precomputed.json  resources.json  settings.json  state.json  texts.json  units.json  users.json
Tekst-API/tekst/sample_data/import/: structure_fdhdgg.json  structure_fdhdgg_updates_invalid_data.json  structure_fdhdgg_updates_invalid_loc_id.json
Tekst-API/tekst/sample_data/migrations/: 0_4_0a0.json  0_4_1a0.json  0_5_0a0.json  0_7_0a0.json  0_8_0a0.json
Tekst-API/tekst/sample_data/structure/: fdhdgg.json
Tekst-API/tekst/search/: __init__.py  responses.py  template.py  templates.py  utils.py
Tekst-API/tekst/utils/: __init__.py  dev.py  html.py  importer.py  strings.py  validators.py
Tekst-API/tests/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_bookmarks.py  test_api_browse.py  test_api_contents.py  test_api_corrections.py  test_api_docs.py  test_api_locations.py  test_api_messages.py  test_api_node.py  test_api_nodes.py  test_api_platform.py  test_api_resource.py  test_api_resources.py  test_api_search.py  test_api_status.py  test_api_tasks.py  test_api_text.py  test_api_texts.py  test_api_unit.py  test_api_units.py  test_api_users.py  test_bootstrap.py  test_config.py  test_email.py  test_migrations.py  test_misc.py  test_models.py  test_openapi.py  test_setup.py  test_utils.py  test_utils_html.py  test_utils_strings.py  test_versions.py
Tekst-API/tests/data/: structure.json  test-data.json
Tekst-API/tests/data/db/: layers.json  texts.json  units.json
Tekst-API/tests/integration/: test_api_auth.py  test_api_docs.py  test_api_layer.py  test_api_node.py  test_api_platform.py  test_api_resource.py  test_api_text.py  test_api_unit.py  test_email.py
Tekst-API/tests/test_data/collections/: contents.json  locations.json  resources.json  segments.json  state.json  texts.json  users.json
Tekst-API/tests/unit/: test_config.py  test_models.py  test_strings.py
server/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
server/src/: app.py
server/src/textrig/: app.py
server/tests/: __init__.py  conftest.py  context.py  test_dummy.py
server/textrig/: __main__.py  app.py
(+1076 files in other folders)
