[tool.poetry]
name = "textrig"
version = "0.0.1"
description = "The server part of TextRig - an open, collaborative text research platform"
readme = "README.md"
repository = "https://github.com/VedaWebProject/textrig-server"
documentation = "https://github.com/VedaWebProject/textrig"
keywords = ["text", "research", "platform", "collaboration"]
authors = ["Börge Kiss <bkis@bkis.github.io>"]
license = "AGPL-3.0-or-later"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
"VedaWeb Project Website" = "https://vedaweb.uni-koeln.de"
"License" = "https://www.gnu.org/licenses/agpl-3.0.txt"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88"
ujson = "^5.4"
python-dotenv = "^0.20"
email-validator = "^1.2.1"
motor = "^3.0.0"
python-multipart = "^0.0.5"
pyhumps = "^3.8.0"
pluggy = "^1.0.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
isort = "^5.10"
black = "^22.3"
coverage = {extras = ["toml"], version = "^6.4"}
requests = "^2.28"
uvicorn = "^0.18"
flake8 = "^5.0.2"
pytest-datadir = "^1.3.1"
colorlog = "^6.7.0"
pytest-dotenv = "^0.5.2"
httpx = "^0.23.0"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 88
lines_after_imports = 2

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
env_override_existing_values = 1
env_files = [".env.dev", ".env.test"]

[tool.coverage.run]
source = ["textrig"]
branch = true
omit = [
    "*/**/__main__.py",
    "*/**/__init__.py"
]

[tool.coverage.report]
precision = 2
skip_empty = true

[tool.coverage.html]
title = "TextRig - Test Coverage Report"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
