[tool.poetry]
name = "tekst"
version = "0.1.1a0"
description = "An online text research platform"
readme = "README.md"
repository = "https://github.com/VedaWebProject/Tekst"
documentation = "https://vedawebproject.github.io/Tekst"
keywords = ["text", "research", "platform", "collaboration"]
authors = ["Börge Kiss <bkis@bkis.github.io>"]
license = "AGPL-3.0-or-later"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
"VedaWeb Project Website" = "https://vedaweb.uni-koeln.de"
"License" = "https://www.gnu.org/licenses/agpl-3.0.txt"

[tool.poetry.dependencies]
python = "^3.10"
ujson = "^5.8.0"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0"
pyhumps = "^3.8.0"
click = "^8.1.6"
beanie = "^1.21.0"
fastapi-users = {extras = ["beanie"], version = "^14.0.0"}
starlette-csrf = "^3.0.0"
pydantic-settings = "^2.0.2"
pydantic-extra-types = "^2.0.0"
bleach = "^6.1.0"
jsonref = "^1.1.0"
elasticsearch = "^8.15.1"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.2"}
requests = "^2.31.0"
colorlog = "^6.7.0"
pytest-dotenv = "^0.5.2"
httpx = "^0.28.0"
asgi-lifespan = "^2.1.0"
ruff = "^0.8.0"
pytest-env = "^1.1.1"

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4
respect-gitignore = false
src = ["tekst", "tests"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
ignore = ["F722"]
select = ["E", "F", "W", "I", "UP", "SIM"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
env_override_existing_values = 1
env_files = [".env.dev", ".env.test"]
filterwarnings = [
    'ignore:directory "/run/secrets" does not exist:UserWarning'
]

[tool.coverage.run]
source = ["tekst"]
branch = false
omit = [
    "tekst/__main__.py",
]

[tool.coverage.report]
precision = 2
skip_empty = true

[tool.coverage.html]
title = "Tekst - Test Coverage Report"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
