[project]
name = "tekst"
version = "0.30.1a0"
description = "An online text research platform"
readme = "README.md"
authors = [
    { name = "Börge Kiss" }
]
maintainers = [
    { name = "Börge Kiss" }
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyhumps<4.0.0,>=3.8.0",
    "click<9.0.0,>=8.1.6",
    "beanie<2.0.0,>=1.21.0",
    "fastapi-users[beanie]<15.0.0,>=14.0.0",
    "starlette-csrf<4.0.0,>=3.0.0",
    "pydantic-settings<3.0.0,>=2.0.2",
    "pydantic-extra-types<3.0.0,>=2.0.0",
    "bleach<7.0.0,>=6.1.0",
    "jsonref<2.0.0,>=1.1.0",
    "fastapi>=0.115.6",
    "elasticsearch[async]>=9.0.1",
]
keywords = [
    "text",
    "research",
    "platform",
    "collaboration",
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    # Audience
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    # Topic
    "Topic :: Text Processing :: Linguistic",
    # Supported Python versions
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
repository = "https://github.com/VedaWebProject/Tekst"
documentation = "https://vedawebproject.github.io/Tekst"
license = "https://www.gnu.org/licenses/agpl-3.0.txt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.1.1",
    "requests<3.0.0,>=2.31.0",
    "colorlog<7.0.0,>=6.7.0",
    "pytest-dotenv<1.0.0,>=0.5.2",
    "httpx<1.0.0,>=0.28.0",
    "asgi-lifespan<3.0.0,>=2.1.0",
    "ruff<1.0.0,>=0.8.0",
    "pytest-env<2.0.0,>=1.1.1",
    "uvicorn[standard]>=0.34.2",
    "fastapi-cli>=0.0.7",
    "pytest-cov>=6.1.1",
]

# ruff

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
respect-gitignore = false
src = ["tekst", "tests"]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
ignore = ["F722"]
select = ["E", "F", "W", "I", "UP", "SIM"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# pytest

[tool.pytest.ini_options]
testpaths = ["tests"]
env_override_existing_values = 1
env_files = [".env.dev", ".env.test"]
addopts = "--cov=tekst --cov-fail-under=100 --cov-report=term-missing"

# coverage

[tool.coverage.run]
source = ["tekst"]
branch = false
omit = [
    "tekst/__main__.py",
]

[tool.coverage.report]
precision = 2
skip_empty = true

[tool.coverage.html]
title = "Tekst-API Test Coverage Report"
