[metadata]
name = TextRig
version = attr: textrig.__VERSION__
description = An open and collaborative text research platform
long_description = file: README.md
long_description_content_type = text/markdown
keywords = text, research, annotation, collaboration
license = AGPLv3+
license_file = LICENSE
url = https://github.com/VedaWebPlatform/TextRig
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Development Status :: 1 - Planning

[options]
python_requires = >=3.8.10
test_suite = tests
#include_package_data = True
package_dir =
    = src
packages = find:
install_requires =

# [options.package_data]
# {name} = py.typed, _version.txt, *.pyi

# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

[options.packages.find]
where = src

[isort]
profile = black
line_length = 79
src_paths = src, tests

[flake8]
max-line-length = 88
extend-ignore = E203, E501
select = C,E,F,W,B,B950
#doctests = True
exclude =
    .git,
    .eggs,
    __pycache__,
    docs/,
    build/,
    dist/